Updating notebook to include graphics/bonus

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -6,16 +6,42 @@
    "source": [
     "# Assignment 6: Hidden Markov Models\n",
     "\n",
+    "## Submission\n",
+    "All submissions will be via Gradescope. If you're completing this assignment in Jupyter Notebook, you must run the `notebook2script.py` file to export your work to a python file. To generate your submission file, run the command \n",
+    "\n",
+    "`python notebook2script.py submission`:\n",
+    "\n",
+    "and your file will be created under the `submission` directory.\n",
+    "\n",
+    "Upload the resulting `submission.py` file to the Assignment 6 assignment on Gradescope for feedback.\n",
+    "\n",
+    "#### IMPORTANT: A total of 10 submissions is allowed for this assignment. Please use your submissions carefully and do not submit until you have thoroughly tested your code locally.\n",
+    "\n",
+    "#### If you're at 9 submissions, use your tenth and last submission wisely. The submission marked as ‘Active’ in Gradescope will be the submission counted towards your grade. \n",
+    "\n",
+    "Please also submit your submission.py to Canvas as backup.\n",
+    "\n",
+    "\n",
+    "\n",
     "## Overview\n",
-    "Hidden Markov Models are used extensively in Artificial Intelligence, Pattern Recognition, Computer Vision, and many other computer fields. If a system has unobservable (hidden) states and each state is independent of the prior, then we can create a model of that system using probability distributions over a sequence of observations. The idea is that we can provide this system with a series of observations to use to query what is the most likely sequence of states that generated these observations\n",
     "\n",
     "The goal of this assignment is to demonstrate the power of probabalistic models. You will build a word recognizer for American Sign Language (ASL) video sequences. In particular, this project employs [hidden Markov models (HMM's)](https://en.wikipedia.org/wiki/Hidden_Markov_model) to analyze a series of measurements taken from videos of American Sign Language (ASL) collected for research (see the [RWTH-BOSTON-104 Database](http://www-i6.informatik.rwth-aachen.de/~dreuw/database-rwth-boston-104.php)).\n",
     "\n",
-    "In each video, there's an ASL signer signing a meaningful sentence in ASL. You are given the XY coordinates of the speaker's left hand, right hand and nose for every frame. The following diagram shows how the positions of the left hand (Red), right hand (Blue), and nose (Green) change over time in video number #66. Saturation of colors represents time elapsed.\n",
+    "In each video, an ASL signer is signing a meaningful sentence. In a typical ASL recognition system, you observe the XY coordinates of the speaker's left hand, right hand, and nose for every frame. The following diagram shows how the positions of the left hand (Red), right hand (Blue), and nose (Green) change over time in video number #66. Saturation of colors represents time elapsed.\n",
     "\n",
     "<img src=\"./demo/hands_nose_position.png\" alt=\"hands nose position\">\n",
     "\n",
-    "In this assignment, for the sake of simplicity, you will only use the Y-coordinates to construct your HMM. In Part 1 you will build a one dimensional model, recognizing words based only on a series of right-hand Y coordinates; In Part 2 you will go multidimensional, and at each time step (frame) you will have two observed coordinates, representing right hand & left hand Y positions at that frame.\n"
+    "In this assignment, for the sake of simplicity, you will only use the Y-coordinates of each hand to construct your HMM. In Part 1 you will build a one dimensional model, recognizing words based only on a series of right-hand Y coordinates; in Part 2 you will go multidimensional and utilize both hands. At this point, you will have two observed coordinates at each time step (frame) representing right hand & left hand Y positions.\n",
+    "\n",
+    "The words you will be recognizing are \"BUY\", \"HOUSE\", and \"CAR\". These individual signs can be seen in the sign phrases from our dataset:\n",
+    "\n",
+    "![](demo/buy_house_slow.gif) \n",
+    "\n",
+    "<p style=\"text-align:center; font-weight:bold\"> JOHN CAN BUY HOUSE </p> \n",
+    "\n",
+    "![](demo/buy_car_slow.gif) \n",
+    "\n",
+    "<p style=\"text-align:center;  font-weight:bold\"> JOHN BUY CAR [FUTURE] </p> "
    ]
   },
   {
@@ -546,12 +572,76 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**CONGRATULATIONS!**  You have just completed your final assignment for CS6601 Artificial Intelligence.\n",
+    "\n",
+    "\n",
+    "### Bonus\n",
+    "\n",
+    "Note: All graphics are from Dr. Ploetz's 2005 Disseration [\"Advanced Stochastic Protein Sequence Analysis\"](http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.667.139&rep=rep1&type=pdf)\n",
+    "\n",
+    "#### Description\n",
+    "\n",
+    "You might have noticed that the HMMs that you've constructed in this assignment are created and trained using data from only one user in a static environment. While these can be useful in practice, it is often the case that we want our HMMS to adapt to many different users and many different environments. For example, if we're reading hand positions from a video frame, what if the capture device is tilted? Our left and right hand position data will be affected, and our HMM could output a low probability for what in reality could be a perfect sign. How do we approach this problem?\n",
+    "\n",
+    "One solution is to collect lots of data from whatever scenario we find ourselves in and train an entirely new HMM. This is infeasible in many real-world applications, and is extremely data inefficient as we discard all data collected beforehand. A more practical solution is to collect a small amount of data for our new scenario, and use this data to adapt our previously trained HMM for use in this unfamiliar environment. One prevalent technique to apply this idea is called MLLR, or Maximum Likelihood Linear Regression, and involves transforming Gaussian parameters in an HMM based on new adaptation data. It is feasible in real applications as it only requires a small amount of adaptation data, and is data efficient in that we keep the information gained from our original training data. In this bonus, you'll adapt your constructed models to a new user.\n",
+    "\n",
+    "In the context of sign language and many others, when we adapt our model we don't want to change the transition probabilities, only the gaussian emission parameters of each state. Think of it as the signs themselves are not changing; simply the context in which we observe our data is changing. If we plotted all of our emission gaussians for all states, we might see something like this:\n",
+    "\n",
+    "<img src=\"bonus_graphics/sign_mixture.PNG\" alt=\"gaussian_plot\">\n",
+    "\n",
+    "In the scenario above with the tilted capture device, we would expect the general form of our model to stay the same with a slight transformation to fit the misaligned angle. Given a small amount of data from this tilted perspective, we would want to construct a transformation such that we can produce a HMM for this specific scenario. This is depicted in the graphic below:\n",
+    "\n",
+    "<img src=\"bonus_graphics/adapted_signs.PNG\" alt=\"gaussian_plot\">\n",
+    "\n",
+    "##### In this bonus we'll focus on creating a transformation matrix to change the means of each gaussian, not the variance.\n",
+    "\n",
+    "\n",
+    "#### Procedure\n",
+    "\n",
+    "Below are three new data sequences for a new user in an unknown environment. Note that the data points in each state are provided, and there is no need for moving data points between states.\n",
+    "\n",
+    "Word | Frames | Observed sequence (R, L) | State1 | State2 | State3\n",
+    "--- | --- | --- | --- | --- | --- \n",
+    "BUY | 11 | (61,123), (61, 116), (59, 121), (65, 99), (73, 97), (75, 98), (79, 74), (79, 84), (79, 84), (74, 89), (68, 81) | (61,123), (61, 116), (59, 121) | (65, 99), (73, 97), (75, 98) | (79, 74), (79, 84), (79, 84), (74, 89), (68, 81) \n",
+    "CAR | 8 | (44, 73), (53, 70), (62, 78), (64, 62), (66, 58), (59, 51), (61, 76), (58, 90)| (44, 73), (53, 70), (62, 78)| (64, 62), (66, 58), (59, 51)| (61, 76), (58, 90)\n",
+    "HOUSE | 16 | (59, 65), (59, 68), (60, 69), (57, 70), (56, 64), (49, 59), (51, 57), (51, 51), (53, 51), (59, 59), (72, 79), (81, 82), (82, 89), (84, 90), (86, 90), (90, 93)| (59, 65), (59, 68), (60, 69), (57, 70), (56, 64)| (49, 59), (51, 57), (51, 51), (53, 51), (59, 59)| (72, 79), (81, 82), (82, 89), (84, 90), (86, 90), (90, 93)\n",
+    "\n",
+    "\n",
+    "The original proposal of this technique is described in [C.J. Leggetter's 1995 paper](http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.89.2050&rep=rep1&type=pdf), and we'll outline the steps here. Our objective is to construct a transformation matrix $W$ that we can apply to our existing means to produce the new parameters for our transformed HMM:\n",
+    "\n",
+    "<img src=\"bonus_graphics/adapted_means.PNG\" alt=\"gaussian_plot\">\n",
+    "\n",
+    "We can find this matrix W by the following equations:\n",
+    "\n",
+    "<img src=\"bonus_graphics/equations.PNG\" alt=\"gaussian_plot\">\n",
+    "\n",
+    "#### Variable Explanation:\n",
+    "\n",
+    "$R$: There are many derivations and considerations that we're simplifying in this section, and one of them is Regression Classes, denoted by $R$ in the above equations. A Regression Class is used if you want your adaptation data to only apply to a subset of your HMM, or only a certain collection of states. For this bonus, we consider all our states to be in the same Regression Class, and thus $\\delta$ will always be equal to one.\n",
+    "\n",
+    "$\\vec{x}_t$ : $\\vec{x}$ is the adaptation data vector, and $\\vec{x}_t$ represents the data collected in time-step $t$.\n",
+    "\n",
+    "$s_t$: $s_t$ represents the state that the sequence is currently in at time-step $t$.\n",
+    "\n",
+    "$\\mu_{ki}$: $\\mu_k$ represents the means of a particular state $k$, and $i$ refers to each dimension in the mean.  \n",
+    "\n",
+    "#### Functions to complete:\n",
+    "\n",
+    "1. `MLLR_results()`"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#export\n",
     "def MLLR_results():\n",
+    "    \n",
     "     \"\"\"Complete the MLLR adaptation process with the new adaptation data and \n",
     "     return the new emission parameters for each state.\n",
     "    \"\"\"\n",
