Updated bonus point value in notebook

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -579,6 +579,7 @@
     "\n",
     "\n",
     "### Bonus\n",
+     "_[15 Points]_\n",
     "\n",
     "Note: All graphics are from Dr. Ploetz's 2005 Disseration [\"Advanced Stochastic Protein Sequence Analysis\"](http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.667.139&rep=rep1&type=pdf)\n",
     "\n",
