--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -9,7 +9,7 @@
     "## Submission\n",
     "All submissions will be via Gradescope. If you're completing this assignment in Jupyter Notebook, you must run the `notebook2script.py` file to export your work to a python file. To generate your submission file, run the command \n",
     "\n",
-    "`python notebook2script.py submission`:\n",
+    "`python notebook2script.py submission`\n",
     "\n",
     "and your file will be created under the `submission` directory.\n",
     "\n",
