Change docstring to be more accurate

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -344,7 +344,7 @@
     "        transition_probs (dict): dictionary representing transitions from each\n",
     "                                 state to every other valid state such as for the above \n",
     "                                 states, there won't be a transition from 'B1' to 'H1'\n",
-    "        emission_paras (tuple): parameters of Gaussian distribution \n",
+    "        emission_paras (dict): parameters of Gaussian distribution \n",
     "                                from each state.\n",
     "    Return:\n",
     "        tuple of\n",
