--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -579,15 +579,16 @@
     "\n",
     "\n",
     "### Bonus\n",
-     "_[5 Points]_\n",
+    "_[5 Points]_\n",
     "\n",
-    "Note: All graphics are from Dr. Ploetz's 2005 Disseration [\"Advanced Stochastic Protein Sequence Analysis\"](http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.667.139&rep=rep1&type=pdf)\n",
     "\n",
     "#### Description\n",
     "\n",
     "You might have noticed that the HMMs that you've constructed in this assignment are created and trained using data from only one user in a static environment. While these can be useful in practice, it is often the case that we want our HMMS to adapt to many different users and many different environments. For example, if we're reading hand positions from a video frame, what if the capture device is tilted? Our left and right hand position data will be affected, and our HMM could output a low probability for what in reality could be a perfect sign. How do we approach this problem?\n",
     "\n",
-    "One solution is to collect lots of data from whatever scenario we find ourselves in and train an entirely new HMM. This is infeasible in many real-world applications, and is extremely data inefficient as we discard all data collected beforehand. A more practical solution is to collect a small amount of data for our new scenario, and use this data to adapt our previously trained HMM for use in this unfamiliar environment. One prevalent technique to apply this idea is called MLLR, or Maximum Likelihood Linear Regression, and involves transforming Gaussian parameters in an HMM based on new adaptation data. It is feasible in real applications as it only requires a small amount of adaptation data, and is data efficient in that we keep the information gained from our original training data. In this bonus, you'll adapt your constructed models to a new user.\n",
+    "One solution is to collect lots of data from whatever scenario we find ourselves in and train an entirely new HMM. This is infeasible in many real-world applications, where data can be expensive to collect. However, we can take advantage of the fact that in many settings we have some amount of choice over what data we collect, and can actively select data that will be informative.\n",
+    "\n",
+    "In this bonus, you'll try to actively select data out of a set of candidate examples that will efficiently adapt an existing model to a new user. As you'll recall from previous assignments, there are many metrics for how \"informative\" an example can be. \n",
     "\n",
     "In the context of sign language and many others, when we adapt our model we don't want to change the transition probabilities, only the gaussian emission parameters of each state. Think of it as the signs themselves are not changing; simply the context in which we observe our data is changing. If we plotted all of our emission gaussians for all states, we might see something like this:\n",
     "\n",
@@ -692,7 +693,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
