--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -575,105 +575,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**CONGRATULATIONS!**  You have just completed your final assignment for CS6601 Artificial Intelligence.\n",
-    "\n",
-    "\n",
-    "### Bonus\n",
-    "_[5 Points]_\n",
-    "\n",
-    "\n",
-    "#### Description\n",
-    "\n",
-    "You might have noticed that the HMMs that you've constructed in this assignment are created and trained using data from only one user in a static environment. While these can be useful in practice, it is often the case that we want our HMMS to adapt to many different users and many different environments. For example, if we're reading hand positions from a video frame, what if the capture device is tilted? Our left and right hand position data will be affected, and our HMM could output a low probability for what in reality could be a perfect sign. How do we approach this problem?\n",
-    "\n",
-    "One solution is to collect lots of data from whatever scenario we find ourselves in and train an entirely new HMM. This is infeasible in many real-world applications, where data can be expensive to collect. However, we can take advantage of the fact that in many settings we have some amount of choice over what data we collect, and can actively select data that will be informative.\n",
-    "\n",
-    "In this bonus, you'll try to actively select data out of a set of candidate examples that will efficiently adapt an existing model to a new user. As you'll recall from previous assignments, there are many metrics for how \"informative\" an example can be. \n",
-    "\n",
-    "In the context of sign language and many others, when we adapt our model we don't want to change the transition probabilities, only the gaussian emission parameters of each state. Think of it as the signs themselves are not changing; simply the context in which we observe our data is changing. If we plotted all of our emission gaussians for all states, we might see something like this:\n",
-    "\n",
-    "<img src=\"bonus_graphics/sign_mixture.PNG\" alt=\"gaussian_plot\">\n",
-    "\n",
-    "In the scenario above with the tilted capture device, we would expect the general form of our model to stay the same with a slight transformation to fit the misaligned angle. Given a small amount of data from this tilted perspective, we would want to construct a transformation such that we can produce a HMM for this specific scenario. This is depicted in the graphic below:\n",
-    "\n",
-    "<img src=\"bonus_graphics/adapted_signs.PNG\" alt=\"gaussian_plot\">\n",
-    "\n",
-    "##### In this bonus we'll focus on creating a transformation matrix to change the means of each gaussian, not the variance.\n",
-    "\n",
-    "\n",
-    "#### Procedure\n",
-    "\n",
-    "Below are three new data sequences for a new user in an unknown environment. Note that the data points in each state are provided, and there is no need for moving data points between states.\n",
-    "\n",
-    "Word | Frames | Observed sequence (R, L) | State1 | State2 | State3\n",
-    "--- | --- | --- | --- | --- | --- \n",
-    "BUY | 11 | (61,123), (61, 116), (59, 121), (65, 99), (73, 97), (75, 98), (79, 74), (79, 84), (79, 84), (74, 89), (68, 81) | (61,123), (61, 116), (59, 121) | (65, 99), (73, 97), (75, 98) | (79, 74), (79, 84), (79, 84), (74, 89), (68, 81) \n",
-    "CAR | 8 | (44, 73), (53, 70), (62, 78), (64, 62), (66, 58), (59, 51), (61, 76), (58, 90)| (44, 73), (53, 70), (62, 78)| (64, 62), (66, 58), (59, 51)| (61, 76), (58, 90)\n",
-    "HOUSE | 16 | (59, 65), (59, 68), (60, 69), (57, 70), (56, 64), (49, 59), (51, 57), (51, 51), (53, 51), (59, 59), (72, 79), (81, 82), (82, 89), (84, 90), (86, 90), (90, 93)| (59, 65), (59, 68), (60, 69), (57, 70), (56, 64)| (49, 59), (51, 57), (51, 51), (53, 51), (59, 59)| (72, 79), (81, 82), (82, 89), (84, 90), (86, 90), (90, 93)\n",
-    "\n",
-    "\n",
-    "The original proposal of this technique is described in [C.J. Leggetter's 1995 paper](http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.89.2050&rep=rep1&type=pdf), and we'll outline the steps here. Our objective is to construct a transformation matrix $W$ that we can apply to our existing means to produce the new parameters for our transformed HMM:\n",
-    "\n",
-    "<img src=\"bonus_graphics/adapted_means.PNG\" alt=\"gaussian_plot\">\n",
-    "\n",
-    "We can find this matrix W by the following equations:\n",
-    "\n",
-    "<img src=\"bonus_graphics/equations.PNG\" alt=\"gaussian_plot\">\n",
-    "\n",
-    "#### Variable Explanation:\n",
-    "\n",
-    "$R$: There are many derivations and considerations that we're simplifying in this section, and one of them is Regression Classes, denoted by $R$ in the above equations. A Regression Class is used if you want your adaptation data to only apply to a subset of your HMM, or only a certain collection of states. For this bonus, we consider all our states to be in the same Regression Class, and thus $\\delta$ will always be equal to one.\n",
-    "\n",
-    "$\\vec{x}_t$ : $\\vec{x}$ is the adaptation data vector, and $\\vec{x}_t$ represents the data collected in time-step $t$.\n",
-    "\n",
-    "$s_t$: $s_t$ represents the state that the sequence is currently in at time-step $t$.\n",
-    "\n",
-    "$\\mu_{ki}$: $\\mu_k$ represents the means of a particular state $k$, and $i$ refers to each dimension in the mean.  \n",
-    "\n",
-    "#### Functions to complete:\n",
-    "\n",
-    "1. `MLLR_results()`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#export\n",
-    "def MLLR_results():\n",
-    "    \n",
-    "    \"\"\"Complete the MLLR adaptation process with the new adaptation data and \n",
-    "     return the new emission parameters for each state.\n",
-    "    \"\"\"\n",
-    "    # TODO: complete this function.\n",
-    "\n",
-    "\n",
-    "    b_emission_paras = {\n",
-    "        'B1': [(None, None), (None, None)],\n",
-    "        'B2': [(None, None), (None, None)],\n",
-    "        'B3': [(None, None), (None, None)],\n",
-    "        'Bend': [(None, None), (None, None)]\n",
-    "    }\n",
-    "\n",
-    "    c_emission_paras = {\n",
-    "        'C1': [(None, None), (None, None)],\n",
-    "        'C2': [(None, None), (None, None)],\n",
-    "        'C3': [(None, None), (None, None)],\n",
-    "        'Cend': [(None, None), (None, None)]\n",
-    "    }\n",
-    "\n",
-    "    h_emission_paras = {\n",
-    "        'H1': [(None, None), (None, None)],\n",
-    "        'H2': [(None, None), (None, None)],\n",
-    "        'H3': [(None, None), (None, None)],\n",
-    "        'Hend': [(None, None), (None, None)]\n",
-    "    }\n",
-    "\n",
-    "    return (b_emission_paras, \n",
-    "            c_emission_paras, \n",
-    "            h_emission_paras)"
+    "**CONGRATULATIONS!**  You have just completed your final assignment for CS6601 Artificial Intelligence.\n"
    ]
   }
  ],
