--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -105,16 +105,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Test on Linux/OS X system\n"
+    }
+   ],
    "source": [
     "import hmm_submission_test as tests"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,9 +133,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "NotImplementedError",
+     "evalue": "",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNotImplementedError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-3afcdeb93883>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m    117\u001b[0m \u001b[0;31m########## DON'T WRITE ANY CODE OUTSIDE THE FUNCTION! ################\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    118\u001b[0m \u001b[0;31m##### CODE BELOW IS USED FOR RUNNING LOCAL TEST DON'T MODIFY IT ######\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 119\u001b[0;31m \u001b[0mtests\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTestPart1a\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtest_prior\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpart_1_a\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    120\u001b[0m \u001b[0mtests\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTestPart1a\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtest_b_emission\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpart_1_a\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    121\u001b[0m \u001b[0mtests\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTestPart1a\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtest_c_emission\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpart_1_a\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Spring2021/CS 6601 TA/assignment_6/hmm_submission_test.py\u001b[0m in \u001b[0;36mtest_prior\u001b[0;34m(self, part_1_a)\u001b[0m\n\u001b[1;32m     21\u001b[0m         (b_prior_probs, b_transition_probs, b_emission_paras,\n\u001b[1;32m     22\u001b[0m         \u001b[0mc_prior_probs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mc_transition_probs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mc_emission_paras\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 23\u001b[0;31m         h_prior_probs, h_transition_probs, h_emission_paras) = part_1_a()\n\u001b[0m\u001b[1;32m     24\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m         \u001b[0mb_prior\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mb_prior_probs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-3-3afcdeb93883>\u001b[0m in \u001b[0;36mpart_1_a\u001b[0;34m()\u001b[0m\n\u001b[1;32m     45\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     46\u001b[0m     \u001b[0;31m# TODO: complete this function.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 47\u001b[0;31m     \u001b[0;32mraise\u001b[0m \u001b[0mNotImplementedError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     48\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     49\u001b[0m     \u001b[0;34m\"\"\"Word BUY\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNotImplementedError\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "#export\n",
     "def part_1_a():\n",
@@ -577,110 +599,6 @@
    "source": [
     "**CONGRATULATIONS!**  You have just completed your final assignment for CS6601 Artificial Intelligence.\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**CONGRATULATIONS!**  You have just completed your final assignment for CS6601 Artificial Intelligence.\n",
-    "\n",
-    "\n",
-    "### Bonus\n",
-     "_[5 Points]_\n",
-    "\n",
-    "Note: All graphics are from Dr. Ploetz's 2005 Disseration [\"Advanced Stochastic Protein Sequence Analysis\"](http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.667.139&rep=rep1&type=pdf)\n",
-    "\n",
-    "#### Description\n",
-    "\n",
-    "You might have noticed that the HMMs that you've constructed in this assignment are created and trained using data from only one user in a static environment. While these can be useful in practice, it is often the case that we want our HMMS to adapt to many different users and many different environments. For example, if we're reading hand positions from a video frame, what if the capture device is tilted? Our left and right hand position data will be affected, and our HMM could output a low probability for what in reality could be a perfect sign. How do we approach this problem?\n",
-    "\n",
-    "One solution is to collect lots of data from whatever scenario we find ourselves in and train an entirely new HMM. This is infeasible in many real-world applications, and is extremely data inefficient as we discard all data collected beforehand. A more practical solution is to collect a small amount of data for our new scenario, and use this data to adapt our previously trained HMM for use in this unfamiliar environment. One prevalent technique to apply this idea is called MLLR, or Maximum Likelihood Linear Regression, and involves transforming Gaussian parameters in an HMM based on new adaptation data. It is feasible in real applications as it only requires a small amount of adaptation data, and is data efficient in that we keep the information gained from our original training data. In this bonus, you'll adapt your constructed models to a new user.\n",
-    "\n",
-    "In the context of sign language and many others, when we adapt our model we don't want to change the transition probabilities, only the gaussian emission parameters of each state. Think of it as the signs themselves are not changing; simply the context in which we observe our data is changing. If we plotted all of our emission gaussians for all states, we might see something like this:\n",
-    "\n",
-    "<img src=\"bonus_graphics/sign_mixture.PNG\" alt=\"gaussian_plot\">\n",
-    "\n",
-    "In the scenario above with the tilted capture device, we would expect the general form of our model to stay the same with a slight transformation to fit the misaligned angle. Given a small amount of data from this tilted perspective, we would want to construct a transformation such that we can produce a HMM for this specific scenario. This is depicted in the graphic below:\n",
-    "\n",
-    "<img src=\"bonus_graphics/adapted_signs.PNG\" alt=\"gaussian_plot\">\n",
-    "\n",
-    "##### In this bonus we'll focus on creating a transformation matrix to change the means of each gaussian, not the variance.\n",
-    "\n",
-    "\n",
-    "#### Procedure\n",
-    "\n",
-    "Below are three new data sequences for a new user in an unknown environment. Note that the data points in each state are provided, and there is no need for moving data points between states.\n",
-    "\n",
-    "Word | Frames | Observed sequence (R, L) | State1 | State2 | State3\n",
-    "--- | --- | --- | --- | --- | --- \n",
-    "BUY | 11 | (61,123), (61, 116), (59, 121), (65, 99), (73, 97), (75, 98), (79, 74), (79, 84), (79, 84), (74, 89), (68, 81) | (61,123), (61, 116), (59, 121) | (65, 99), (73, 97), (75, 98) | (79, 74), (79, 84), (79, 84), (74, 89), (68, 81) \n",
-    "CAR | 8 | (44, 73), (53, 70), (62, 78), (64, 62), (66, 58), (59, 51), (61, 76), (58, 90)| (44, 73), (53, 70), (62, 78)| (64, 62), (66, 58), (59, 51)| (61, 76), (58, 90)\n",
-    "HOUSE | 16 | (59, 65), (59, 68), (60, 69), (57, 70), (56, 64), (49, 59), (51, 57), (51, 51), (53, 51), (59, 59), (72, 79), (81, 82), (82, 89), (84, 90), (86, 90), (90, 93)| (59, 65), (59, 68), (60, 69), (57, 70), (56, 64)| (49, 59), (51, 57), (51, 51), (53, 51), (59, 59)| (72, 79), (81, 82), (82, 89), (84, 90), (86, 90), (90, 93)\n",
-    "\n",
-    "\n",
-    "The original proposal of this technique is described in [C.J. Leggetter's 1995 paper](http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.89.2050&rep=rep1&type=pdf), and we'll outline the steps here. Our objective is to construct a transformation matrix $W$ that we can apply to our existing means to produce the new parameters for our transformed HMM:\n",
-    "\n",
-    "<img src=\"bonus_graphics/adapted_means.PNG\" alt=\"gaussian_plot\">\n",
-    "\n",
-    "We can find this matrix W by the following equations:\n",
-    "\n",
-    "<img src=\"bonus_graphics/equations.PNG\" alt=\"gaussian_plot\">\n",
-    "\n",
-    "#### Variable Explanation:\n",
-    "\n",
-    "$R$: There are many derivations and considerations that we're simplifying in this section, and one of them is Regression Classes, denoted by $R$ in the above equations. A Regression Class is used if you want your adaptation data to only apply to a subset of your HMM, or only a certain collection of states. For this bonus, we consider all our states to be in the same Regression Class, and thus $\\delta$ will always be equal to one.\n",
-    "\n",
-    "$\\vec{x}_t$ : $\\vec{x}$ is the adaptation data vector, and $\\vec{x}_t$ represents the data collected in time-step $t$.\n",
-    "\n",
-    "$s_t$: $s_t$ represents the state that the sequence is currently in at time-step $t$.\n",
-    "\n",
-    "$\\mu_{ki}$: $\\mu_k$ represents the means of a particular state $k$, and $i$ refers to each dimension in the mean.  \n",
-    "\n",
-    "#### Functions to complete:\n",
-    "\n",
-    "1. `MLLR_results()`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#export\n",
-    "def MLLR_results():\n",
-    "    \n",
-    "    \"\"\"Complete the MLLR adaptation process with the new adaptation data and \n",
-    "     return the new emission parameters for each state.\n",
-    "    \"\"\"\n",
-    "    # TODO: complete this function.\n",
-    "\n",
-    "\n",
-    "    b_emission_paras = {\n",
-    "        'B1': [(None, None), (None, None)],\n",
-    "        'B2': [(None, None), (None, None)],\n",
-    "        'B3': [(None, None), (None, None)],\n",
-    "        'Bend': [(None, None), (None, None)]\n",
-    "    }\n",
-    "\n",
-    "    c_emission_paras = {\n",
-    "        'C1': [(None, None), (None, None)],\n",
-    "        'C2': [(None, None), (None, None)],\n",
-    "        'C3': [(None, None), (None, None)],\n",
-    "        'Cend': [(None, None), (None, None)]\n",
-    "    }\n",
-    "\n",
-    "    h_emission_paras = {\n",
-    "        'H1': [(None, None), (None, None)],\n",
-    "        'H2': [(None, None), (None, None)],\n",
-    "        'H3': [(None, None), (None, None)],\n",
-    "        'Hend': [(None, None), (None, None)]\n",
-    "    }\n",
-    "\n",
-    "    return (b_emission_paras, \n",
-    "            c_emission_paras, \n",
-    "            h_emission_paras)"
-   ]
   }
  ],
  "metadata": {
@@ -699,7 +617,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.7-final"
   }
  },
  "nbformat": 4,
