--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -65,6 +65,8 @@
     "- 0.0123 rounds to 0.012\n",
     "- 0.0125 rounds to 0.013\n",
     "\n",
+    "#### When calculating the self transition probability (e.g. P(B2 -> B2)), you should calculate it as 1 - exit transition probability (e.g. 1 - P(B2->B3))\n",
+    "\n",
     "Those values can be hardcoded in your program. Don't use round() from python.\n",
     "\n",
     "Word | Frames | Observed sequence | Initial State1 | Initial State2 | Initial State3\n",
