minor spelling fixes

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -332,7 +332,7 @@
     "        distribution should be zero, instead of the number outputed here.\n",
     "        By definition, the Gaussian percentile of a given value \"x\"\n",
     "        is computed based on the \"area\" under the curve, from left-most to x. \n",
-    "        The proability of getting value \"x\" is zero bcause a single value \"x\"\n",
+    "        The probability of getting value \"x\" is zero bcause a single value \"x\"\n",
     "        has zero width, however, the probability of a range of value can be\n",
     "        computed, for say, from \"x - 0.1\" to \"x + 0.1\".\n",
     "\n",
@@ -357,7 +357,7 @@
     "            transition_probs, emission_paras):\n",
     "    \"\"\"Viterbi Algorithm to calculate the most likely states give the evidence.\n",
     "    Args:\n",
-    "        evidence_vector (list): List of right hand Y-axis positions (interger).\n",
+    "        evidence_vector (list): List of right hand Y-axis positions (integer).\n",
     "        states (list): List of all states in a word. No transition between words.\n",
     "                       example: ['B1', 'B2', 'B3', 'Bend', 'H1', 'H2', 'H3', 'Hend']\n",
     "        prior_probs (dict): prior distribution for each state.\n",
