--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -113,9 +113,11 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "Test on Linux/OS X system\n"
+     "output_type": "stream",
+     "text": [
+      "Test on Linux/OS X system\n"
+     ]
     }
    ],
    "source": [
@@ -124,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,13 +137,119 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[36], [44, 42, 46, 54], [42, 40, 41]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "s1 = [[36,44],[42,46,54],[42,40,41]]\n",
+    "s1[1].insert(0,s1[0].pop())\n",
+    "print(s1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[36, 44], [42, 46, 54], [42, 40, 41]], [[52, 56], [62, 68, 65], [43, 52, 55]], [[49, 44], [60, 56], [59, 60, 55, 47]]]\n",
+      "[[[36], [44, 42, 46, 54], [42, 40, 41]], [[52], [56, 62, 68, 65], [43, 52, 55]], [[49], [44, 60, 56], [59, 60, 55, 47]]]\n",
+      "{'B1': {'B1': 0.625, 'B2': 0.375, 'B3': 0.0, 'Bend': 0.0}, 'B2': {'B1': 0, 'B2': 0.625, 'B3': 0.375, 'Bend': 0.0}, 'B3': {'B1': 0.0, 'B2': 0.0, 'B3': 0.625, 'Bend': 0.375}, 'Bend': {'B1': 0.0, 'B2': 0.0, 'B3': 0.0, 'Bend': 0}}\n",
+      "43.125 4.9355217555999085\n",
+      "56.625 7.581845092060375\n",
+      "53.75 5.868347297152751\n"
+     ]
+    }
+   ],
+   "source": [
+    "def stats(data):\n",
+    "    flattened = list()\n",
+    "    for sub_list in data:\n",
+    "        flattened += sub_list\n",
+    "    flattened = np.array(flattened)\n",
+    "    return flattened.mean(), flattened.std()\n",
+    "\n",
+    "s1 = [[36,44],[42,46,54],[42,40,41]]\n",
+    "s2 = [[52,56],[62,68,65],[43,52,55]]\n",
+    "s3 = [[49,44],[60,56],[59,60,55,47]]\n",
+    "\n",
+    "# s1 = [[47,39,32],[34,36,42],[42,42,34,25]]\n",
+    "# s2 = [[35,35,43],[46,52,52],[56,49,45]]\n",
+    "# s3 = [[28,35,46],[46,48,43],[43,40]]\n",
+    "\n",
+    "# s1 = [[7, 36, 32, 26, 26],[25, 23, 22, 21, 39],[48, 60, 70, 74, 77]]\n",
+    "# s2 = [[50, 50, 49, 47, 39],[39, 38, 38, 50, 56],[61, 67, 67, 67, 67]]\n",
+    "# s3 = [[45, 43, 44, 43, 40],[35, 36, 37, 39, 45],[60, 68, 66, 72, 72, 75]]\n",
+    "\n",
+    "\n",
+    "s = [s1, s2, s3] \n",
+    "\n",
+    "b_tp = {\n",
+    "    'B1': {'B1': 0, 'B2': 0, 'B3': 0., 'Bend': 0.},\n",
+    "    'B2': {'B1': 0, 'B2': 0, 'B3': 0, 'Bend': 0.},\n",
+    "    'B3': {'B1': 0., 'B2': 0., 'B3': 0, 'Bend': 0},\n",
+    "    'Bend': {'B1': 0., 'B2': 0., 'B3': 0., 'Bend': 0},\n",
+    "}\n",
+    "\n",
+    "not_converge = True\n",
+    "\n",
+    "while not_converge:\n",
+    "    \n",
+    "    not_converge = False\n",
+    "    \n",
+    "    print(s)\n",
+    "    b_tp['B1']['B2'] = 3/sum([len(_) for _ in s[0]])\n",
+    "    b_tp['B1']['B1'] = 1 - b_tp['B1']['B2']\n",
+    "    b_tp['B2']['B3'] = 3/sum([len(_) for _ in s[1]])\n",
+    "    b_tp['B2']['B2'] = 1 - b_tp['B2']['B3']\n",
+    "    b_tp['B3']['Bend'] = 3/sum([len(_) for _ in s[2]])\n",
+    "    b_tp['B3']['B3'] = 1 - b_tp['B3']['Bend']\n",
+    "    \n",
+    "    s1_mean, s1_std = stats(s[0])\n",
+    "    s2_mean, s2_std = stats(s[1])\n",
+    "    s3_mean, s3_std = stats(s[2])\n",
+    "    \n",
+    "    for k in range(len(s)):\n",
+    "        for i in range(len(s[k][0])-1,0,-1):\n",
+    "            if abs(s[k][0][i]/s1_std) > abs(s[k][0][i]/s2_std):\n",
+    "                s[k][1].insert(0,s[k][0].pop())\n",
+    "                not_converge = True\n",
+    "            else:\n",
+    "                break\n",
+    "    \n",
+    "        for i in range(len(s[k][1])-1,0,-1):\n",
+    "            if abs(s[k][1][i]/s2_std) > abs(s[k][1][i]/s3_std):\n",
+    "                s[k][2].insert(0,s[k][1].pop())\n",
+    "                not_converge = True\n",
+    "            else:\n",
+    "                break    \n",
+    "    \n",
+    "print(b_tp)\n",
+    "print(s1_mean,s1_std)\n",
+    "print(s2_mean,s2_std)\n",
+    "print(s3_mean,s3_std)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "error",
      "ename": "NotImplementedError",
      "evalue": "",
+     "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNotImplementedError\u001b[0m                       Traceback (most recent call last)",
@@ -203,16 +311,16 @@
     "\n",
     "    \"\"\"Word BUY\"\"\"\n",
     "    b_prior_probs = {\n",
-    "        'B1': 0.,\n",
+    "        'B1': 1/3,\n",
     "        'B2': 0.,\n",
     "        'B3': 0.,\n",
     "        'Bend': 0.,\n",
     "    }\n",
     "    b_transition_probs = {\n",
-    "        'B1': {'B1': 0., 'B2': 0., 'B3': 0., 'Bend': 0.},\n",
-    "        'B2': {'B1': 0., 'B2': 0., 'B3': 0., 'Bend': 0.},\n",
-    "        'B3': {'B1': 0., 'B2': 0., 'B3': 0., 'Bend': 0.},\n",
-    "        'Bend': {'B1': 0., 'B2': 0., 'B3': 0., 'Bend': 0.},\n",
+    "        'B1': {'B1': 0.625, 'B2': 0.375, 'B3': 0., 'Bend': 0.},\n",
+    "        'B2': {'B1': 0, 'B2': 0.625, 'B3': 3/8, 'Bend': 0.},\n",
+    "        'B3': {'B1': 0., 'B2': 0., 'B3': 5/8, 'Bend': 3/8},\n",
+    "        'Bend': {'B1': 0., 'B2': 0., 'B3': 0., 'Bend': 1.0},\n",
     "    }\n",
     "    # Parameters for end state is not required\n",
     "    b_emission_paras = {\n",
@@ -590,9 +698,7 @@
     "    \"\"\"Return your name\n",
     "    \"\"\"\n",
     "    # TODO: finish this\n",
-    "    raise NotImplementedError()\n",
-    "    \n",
-    "    return \"\""
+    "    return \"Zi Sang\""
    ]
   },
   {
@@ -605,7 +711,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -619,7 +725,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7-final"
+   "version": "3.7.11"
   }
  },
  "nbformat": 4,
