--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -164,20 +164,23 @@
      "output_type": "stream",
      "text": [
       "[[[36, 44], [42, 46, 54], [42, 40, 41]], [[52, 56], [62, 68, 65], [43, 52, 55]], [[49, 44], [60, 56], [59, 60, 55, 47]]]\n",
-      "[[[36], [44, 42, 46, 54], [42, 40, 41]], [[52], [56, 62, 68, 65], [43, 52, 55]], [[49], [44, 60, 56], [59, 60, 55, 47]]]\n",
-      "{'B1': {'B1': 0.625, 'B2': 0.375, 'B3': 0.0, 'Bend': 0.0}, 'B2': {'B1': 0, 'B2': 0.625, 'B3': 0.375, 'Bend': 0.0}, 'B3': {'B1': 0.0, 'B2': 0.0, 'B3': 0.625, 'Bend': 0.375}, 'Bend': {'B1': 0.0, 'B2': 0.0, 'B3': 0.0, 'Bend': 0}}\n",
-      "43.125 4.9355217555999085\n",
-      "56.625 7.581845092060375\n",
-      "53.75 5.868347297152751\n"
+      "[36, 44, 52, 56, 49, 44]\n",
+      "[36, 44, 52, 56, 49, 44]\n",
+      "[36, 44, 52, 56, 49, 44]\n",
+      "{'B1': {'B1': 0.5, 'B2': 0.5, 'B3': 0.0, 'Bend': 0.0}, 'B2': {'B1': 0, 'B2': 0.625, 'B3': 0.375, 'Bend': 0.0}, 'B3': {'B1': 0.0, 'B2': 0.0, 'B3': 0.7, 'Bend': 0.3}, 'Bend': {'B1': 0.0, 'B2': 0.0, 'B3': 0.0, 'Bend': 0}}\n",
+      "46.833333333333336 6.439893028787219\n",
+      "46.833333333333336 6.439893028787219\n",
+      "46.833333333333336 6.439893028787219\n"
      ]
     }
    ],
    "source": [
     "def stats(data):\n",
-    "    flattened = list()\n",
-    "    for sub_list in data:\n",
-    "        flattened += sub_list\n",
-    "    flattened = np.array(flattened)\n",
+    "#     flattened = list()\n",
+    "#     for sub_list in data:\n",
+    "#         flattened += sub_list\n",
+    "    print(data)\n",
+    "    flattened = np.array(data)\n",
     "    return flattened.mean(), flattened.std()\n",
     "\n",
     "s1 = [[36,44],[42,46,54],[42,40,41]]\n",
@@ -209,16 +212,16 @@
     "    not_converge = False\n",
     "    \n",
     "    print(s)\n",
-    "    b_tp['B1']['B2'] = 3/sum([len(_) for _ in s[0]])\n",
+    "    b_tp['B1']['B2'] = len(s)/sum([s[_][0] for _ in range(len(s))])\n",
     "    b_tp['B1']['B1'] = 1 - b_tp['B1']['B2']\n",
-    "    b_tp['B2']['B3'] = 3/sum([len(_) for _ in s[1]])\n",
+    "    b_tp['B2']['B3'] = len(s)/sum([s[_][1] for _ in range(len(s))])\n",
     "    b_tp['B2']['B2'] = 1 - b_tp['B2']['B3']\n",
-    "    b_tp['B3']['Bend'] = 3/sum([len(_) for _ in s[2]])\n",
+    "    b_tp['B3']['Bend'] = len(s)/sum([s[_][2] for _ in range(len(s))])\n",
     "    b_tp['B3']['B3'] = 1 - b_tp['B3']['Bend']\n",
     "    \n",
-    "    s1_mean, s1_std = stats(s[0])\n",
-    "    s2_mean, s2_std = stats(s[1])\n",
-    "    s3_mean, s3_std = stats(s[2])\n",
+    "    s1_mean, s1_std = stats(s[0][0]+s[1][0]+s[2][0])\n",
+    "    s2_mean, s2_std = stats(s[0][0]+s[1][0]+s[2][0])\n",
+    "    s3_mean, s3_std = stats(s[0][0]+s[1][0]+s[2][0])\n",
     "    \n",
     "    for k in range(len(s)):\n",
     "        for i in range(len(s[k][0])-1,0,-1):\n",
@@ -239,6 +242,27 @@
     "print(s1_mean,s1_std)\n",
     "print(s2_mean,s2_std)\n",
     "print(s3_mean,s3_std)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[36, 44, 52, 56, 49, 44]\n"
+     ]
+    }
+   ],
+   "source": [
+    "s1 = [[36,44],[42,46,54],[42,40,41]]\n",
+    "s2 = [[52,56],[62,68,65],[43,52,55]]\n",
+    "s3 = [[49,44],[60,56],[59,60,55,47]]\n",
+    "s = [s1,s2,s3]\n",
+    "print(s[0][0]+s[1][0]+s[2][0])"
    ]
   },
   {
