--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -109,6 +109,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
+    "scrolled": true,
     "tags": []
    },
    "outputs": [
@@ -126,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,21 +157,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[36, 44], [42, 46, 54], [42, 40, 41]], [[52, 56], [62, 68, 65], [43, 52, 55]], [[49, 44], [60, 56], [59, 60, 55, 47]]]\n",
-      "[36, 44, 52, 56, 49, 44]\n",
-      "[36, 44, 52, 56, 49, 44]\n",
-      "[36, 44, 52, 56, 49, 44]\n",
-      "{'B1': {'B1': 0.5, 'B2': 0.5, 'B3': 0.0, 'Bend': 0.0}, 'B2': {'B1': 0, 'B2': 0.625, 'B3': 0.375, 'Bend': 0.0}, 'B3': {'B1': 0.0, 'B2': 0.0, 'B3': 0.7, 'Bend': 0.3}, 'Bend': {'B1': 0.0, 'B2': 0.0, 'B3': 0.0, 'Bend': 0}}\n",
-      "46.833333333333336 6.439893028787219\n",
-      "46.833333333333336 6.439893028787219\n",
-      "46.833333333333336 6.439893028787219\n"
+      "{'B1': {'B1': 0.0, 'B2': 1.0, 'B3': 0.0, 'Bend': 0.0}, 'B2': {'B1': 0, 'B2': 0.7272727272727273, 'B3': 0.2727272727272727, 'Bend': 0.0}, 'B3': {'B1': 0.0, 'B2': 0.0, 'B3': 0.7, 'Bend': 0.3}, 'Bend': {'B1': 0.0, 'B2': 0.0, 'B3': 0.0, 'Bend': 0}}\n"
      ]
     }
    ],
@@ -179,7 +173,7 @@
     "#     flattened = list()\n",
     "#     for sub_list in data:\n",
     "#         flattened += sub_list\n",
-    "    print(data)\n",
+    "#     print(data)\n",
     "    flattened = np.array(data)\n",
     "    return flattened.mean(), flattened.std()\n",
     "\n",
@@ -211,17 +205,22 @@
     "    \n",
     "    not_converge = False\n",
     "    \n",
-    "    print(s)\n",
-    "    b_tp['B1']['B2'] = len(s)/sum([s[_][0] for _ in range(len(s))])\n",
+    "#     print(s)\n",
+    "    b_tp['B1']['B2'] = len(s)/sum([len(s[_][0]) for _ in range(len(s))])\n",
     "    b_tp['B1']['B1'] = 1 - b_tp['B1']['B2']\n",
-    "    b_tp['B2']['B3'] = len(s)/sum([s[_][1] for _ in range(len(s))])\n",
+    "    b_tp['B2']['B3'] = len(s)/sum([len(s[_][1]) for _ in range(len(s))])\n",
     "    b_tp['B2']['B2'] = 1 - b_tp['B2']['B3']\n",
-    "    b_tp['B3']['Bend'] = len(s)/sum([s[_][2] for _ in range(len(s))])\n",
+    "    b_tp['B3']['Bend'] = len(s)/sum([len(s[_][2]) for _ in range(len(s))])\n",
     "    b_tp['B3']['B3'] = 1 - b_tp['B3']['Bend']\n",
     "    \n",
-    "    s1_mean, s1_std = stats(s[0][0]+s[1][0]+s[2][0])\n",
-    "    s2_mean, s2_std = stats(s[0][0]+s[1][0]+s[2][0])\n",
-    "    s3_mean, s3_std = stats(s[0][0]+s[1][0]+s[2][0])\n",
+    "    s1_list, s2_list, s3_list = list(), list(), list()\n",
+    "    for i in range(len(s)):\n",
+    "        s1_list += s[i][0]\n",
+    "        s2_list += s[i][1]\n",
+    "        s3_list += s[i][2]\n",
+    "    s1_mean, s1_std = stats(s1_list)\n",
+    "    s2_mean, s2_std = stats(s2_list)\n",
+    "    s3_mean, s3_std = stats(s3_list)\n",
     "    \n",
     "    for k in range(len(s)):\n",
     "        for i in range(len(s[k][0])-1,0,-1):\n",
@@ -239,30 +238,9 @@
     "                break    \n",
     "    \n",
     "print(b_tp)\n",
-    "print(s1_mean,s1_std)\n",
-    "print(s2_mean,s2_std)\n",
-    "print(s3_mean,s3_std)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[36, 44, 52, 56, 49, 44]\n"
-     ]
-    }
-   ],
-   "source": [
-    "s1 = [[36,44],[42,46,54],[42,40,41]]\n",
-    "s2 = [[52,56],[62,68,65],[43,52,55]]\n",
-    "s3 = [[49,44],[60,56],[59,60,55,47]]\n",
-    "s = [s1,s2,s3]\n",
-    "print(s[0][0]+s[1][0]+s[2][0])"
+    "# print(s1_mean,s1_std)\n",
+    "# print(s2_mean,s2_std)\n",
+    "# print(s3_mean,s3_std)"
    ]
   },
   {
